test/spec_vectors/simd_f32x4_cmp/fail/module_21.wat
(module (func $f32x4.le-arg-empty (result v128) (f32x4.le)))